Fix combobox alignment.

--- a/app/assets/stylesheets/partials/_combobox.scss
+++ b/app/assets/stylesheets/partials/_combobox.scss
@@ -45,7 +45,7 @@
 }
 
 .form .autocomplete-combobox {
-  padding-left: 192px;
+  padding-left: 172px;
 }
 
 td .autocomplete-combobox {
